2006-10-04  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/xtensa-config.sh: Delete file.
	* emulparams/elf32xtensa.sh: Set MAXPAGESIZE here instead of including
	xtensa-config.sh.
	* Makefile.am (eelf32xtensa.c): Remove dependency on xtensa-config.sh.
	* Makefile.in: Regenerate.

2006-10-03  Pedro Alves  <pedro_alves@portugalmail.pt>

	* pe-dll.c : Fix typo.
	(autofilter_symbolprefixlist) : Remove __imp_.
	(is_import) : New.
	(auto-export) : Remove  re-import check. Moved to callers.
	(process_def_file) : Check is symbol is an import. Always
	underscore __imp_.
	Only skip underscore on underscored targets.
	(make_one) : Always underscore __imp_.
	(pe_create_runtime_relocator_reference) : Only underscore
	_pei386_runtime_relocator on underscored targets.
	(pe_process_import_defs) : Always underscore __imp_.
	* pe.em (U) : New macro.
	(set_pe_subsystem) : Remove underscore from _WinMainCRTStartup
	on wince subsystem case.
	(pe_find_data_imports) : Use U on "_head_".
	(gld_${EMULATION_NAME}_unrecognized_file) : Use U.

2006-09-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3223
	PR ld/3267
	* ld.texinfo: Updated Output Section Discarding.

	* ldlang.h (lang_output_section_statement_type): Add
	section_relative_symbol.
	* ldlang.c (strip_excluded_output_sections): Don't strip a
	section with a symbol relative to it.
	(lang_size_sections_1): Mark if an output section has a symbol
	symbol relative to it.

2006-09-25  Bob Wilson  <bob.wilson@acm.org>

	* ld.texinfo (Options): Update description of local symbols for -X.

2006-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3249
	* scripttempl/elf.sc: Don't combine .gnu.linkonce.d.*personality*
	and .gnu.linkonce.wi.* sections with .data and .debug_info for
	relocatable link.

2006-09-20  Kai Tietz  <Kai.Tietz@onevision.com>

	* configure.in: Add new target x86_64-pc-mingw64.
	* configure: Regenerate.
	* configure.tgt: Add definition of target emulation i386pep.
	* Makefile.am: Add new target files for target-all.